# desktop_pet

./: CMakeLists.txt  README.md
res/: animation.json
src/: animations.cpp  animations.h  constant.h  desktop_pet.cpp  desktop_pet.h  encoding.cpp  encoding.h  extra_function.cpp  extra_function.h  frame.cpp  frame.h  frame_group.cpp  frame_group.h  init_img.cpp  init_img.h  init_sdl.cpp  init_sdl.h  main.cpp  popup_menu.cpp  popup_menu.h  renderer.cpp  renderer.h  timer.cpp  timer.h  window.cpp  window.h
